// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should not blow up when rendered into DOM 1`] = `
<RecipeCard
  recipe={
    Object {
      "cook_time": "5 minutes",
      "ingredients": Array [
        Object {
          "id": 1,
          "name": "1 can black beans",
        },
        Object {
          "id": 2,
          "name": "1 cup basmati rice",
        },
      ],
      "instructions": Array [
        Object {
          "id": "abc",
          "text": "microwave ingredients",
        },
        Object {
          "id": "def",
          "text": "eat food",
        },
      ],
      "name": "Beans and rice",
      "prep_time": "10 minutes",
      "total_time": "20 minutes",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div>
    <div>
      <h2>
        Beans and rice
      </h2>
    </div>
    <Time
      label="Cook time"
      value="5 minutes"
    >
      <div>
        <strong>
          Cook time
        </strong>
        <p>
          5 minutes
        </p>
      </div>
    </Time>
    <Time
      label="Prep time"
      value="10 minutes"
    >
      <div>
        <strong>
          Prep time
        </strong>
        <p>
          10 minutes
        </p>
      </div>
    </Time>
    <Time
      label="Total time"
      value="20 minutes"
    >
      <div>
        <strong>
          Total time
        </strong>
        <p>
          20 minutes
        </p>
      </div>
    </Time>
    <IngredientsList
      ingredients={
        Array [
          Object {
            "id": 1,
            "name": "1 can black beans",
          },
          Object {
            "id": 2,
            "name": "1 cup basmati rice",
          },
        ]
      }
    >
      <h3>
        Ingredients
      </h3>
      <ul>
        <li
          key="1"
        >
          1 can black beans
        </li>
        <li
          key="2"
        >
          1 cup basmati rice
        </li>
      </ul>
    </IngredientsList>
    <InstructionsList
      instructions={
        Array [
          Object {
            "id": "abc",
            "text": "microwave ingredients",
          },
          Object {
            "id": "def",
            "text": "eat food",
          },
        ]
      }
    >
      <h3>
        Instructions
      </h3>
      <ol>
        <li
          key="abc"
        >
          microwave ingredients
        </li>
        <li
          key="def"
        >
          eat food
        </li>
      </ol>
    </InstructionsList>
  </div>
</RecipeCard>
`;

exports[`it should render all the recipe fields 1`] = `
<div>
  <div>
    <h2>
      Beans and rice
    </h2>
  </div>
  <Time
    label="Cook time"
    value="5 minutes"
  />
  <Time
    label="Prep time"
    value="10 minutes"
  />
  <Time
    label="Total time"
    value="20 minutes"
  />
  <IngredientsList
    ingredients={
      Array [
        Object {
          "id": 1,
          "name": "1 can black beans",
        },
        Object {
          "id": 2,
          "name": "1 cup basmati rice",
        },
      ]
    }
  />
  <InstructionsList
    instructions={
      Array [
        Object {
          "id": "abc",
          "text": "microwave ingredients",
        },
        Object {
          "id": "def",
          "text": "eat food",
        },
      ]
    }
  />
</div>
`;
